--- a/docs/algorithm/algorithms.tex
+++ b/docs/algorithm/algorithms.tex
@@ -268,7 +268,7 @@ Each entry in the \AllelesTable{} represents a specific SNP and allele by encodi
 \subsection{Index}
 
 
-For any nucleotide sequence \textsl{S}, the kmers that end with \textsl{S} occupy consecutive rows in the \KmersTable{}.  They can be quickly located with an an index that simply maps \textsl{S} to the range of rows that share \textsl{S}.
+For any nucleotide sequence \textsl{S}, the kmers that end with \textsl{S} occupy consecutive rows in the \KmersTable{}.  They can be quickly located with an index that simply maps \textsl{S} to the range of rows that share \textsl{S}.
 
 For any given 31-bp kmer \textsl{query}, the following algorithm locates every allele in the database that is covered by \textsl{query}.
 \begin{itemize}
